# cobar-2026

./: pyproject.toml
miniproject/: README.md  run_controller.ipynb  run_interactive.py
miniproject/notebooks/: odor.ipynb  wind.ipynb
miniproject/submission/: controller.py
notebooks/week3/: solutions.ipynb
notebooks/week4/: solutions_olfaction.ipynb  solutions_vision.ipynb
notebooks/week5/: solutions.ipynb
notebooks/week6/: solutions.ipynb
src/flygym/: rendering.py  simulation.py
src/flygym/assets/model/: mujoco_globals.yaml  rigging.yaml
src/flygym/compose/: fly.py  world.py
src/miniproject/: __init__.py  fly.py  simulation.py  utils.py
src/miniproject/arena/: banana.py  dragonfly.py  grass.py  sky.py  terrain.py
src/miniproject/interactive/: __init__.py  controls.py  game_state.py
